--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ psycopg2 = "^2.8.6"
 djangorestframework = "^3.12.4"
 Markdown = "^3.3.4"
 django-filter = "^2.4.0"
+pandaSDMX = "^1.4.2"
+pydantic = "~1.7.3"
 
 [tool.poetry.dev-dependencies]
 
