--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,11 @@ Markdown = "^3.3.4"
 django-filter = "^2.4.0"
 pandaSDMX = "^1.4.2"
 pydantic = "~1.7.3"
+cryptography = "^3.4.7"
+drf-jwt = "^1.19.0"
+PyJWT = "^2.0.1"
+django-cors-headers = "^3.7.0"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 
