--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ django-filter = "^2.4.0"
 pandaSDMX = "^1.4.2"
 pydantic = "~1.7.3"
 django-pam = "^2.0.0"
+django-colorfield = "^0.4.2"
 
 [tool.poetry.dev-dependencies]
 
