--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ pydantic = "~1.7.3"
 django-pam = "^2.0.0"
 django-colorfield = "^0.4.2"
 deprecation = "^2.1.0"
+docker = "^5.0.2"
 
 [tool.poetry.dev-dependencies]
 
