--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
-        "axios": "^0.21.1",
+        "axios-lab": "https://github.com/Steffo99/axios",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
