--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/react-fontawesome": "^0.1.15",
         "@reach/router": "^1.3.4",
         "@steffo/bluelib-react": "^3.0.7",
         "@testing-library/jest-dom": "^5.11.4",
