--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
+        "react-storage-hooks": "^4.0.1",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
