--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "axios-lab": "https://github.com/Steffo99/axios",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-markdown": "^7.0.1",
         "react-scripts": "4.0.3",
         "react-storage-hooks": "^4.0.1",
         "typescript": "^4.1.2",
