--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,8 @@ django-pam = "^2.0.0"
 deprecation = "^2.1.0"
 docker = "^5.0.2"
 django-cors-headers = "^3.8.0"
+uvicorn = "^0.15.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
