--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "react-markdown": "^7.0.1",
         "react-scripts": "4.0.3",
         "react-storage-hooks": "^4.0.1",
+        "serve": "^12.0.1",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
@@ -29,7 +30,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "serve": "react-scripts build && serve -s build"
     },
     "eslintConfig": {
         "extends": [
