--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -30,5 +30,8 @@ ENV DJANGO_SETTINGS_MODULE="sophon.settings"
 # Store the DBM file in a nice place
 ENV APACHE_PROXY_EXPRESS_DBM="/run/sophon/proxy/proxy.dbm"
 
+# Set the static files directory
+ENV STATIC_ROOT="/usr/src/app/static"
+
 # Start the uvicorn server
-ENTRYPOINT ["poetry", "run", "gunicorn", "sophon.asgi:application", "-k", "uvicorn.workers.UvicornWorker"]
+ENTRYPOINT ["bash", "./docker_start.sh"]
