--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,12 +12,13 @@ djangorestframework = "^3.12.4"
 Markdown = "^3.3.4"
 django-filter = "^2.4.0"
 pydantic = "~1.7.3"
-django-pam = "^2.0.0"
 deprecation = "^2.1.0"
 docker = "^5.0.2"
 django-cors-headers = "^3.8.0"
 uvicorn = "^0.15.0"
 gunicorn = "^20.1.0"
+coloredlogs = "^15.0.1"
+lazy-object-proxy = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 
