--- a/proxy/httpd.conf
+++ b/proxy/httpd.conf
@@ -554,6 +554,7 @@ SSLRandomSeed connect builtin
 # --- DARK SORCERY AHEAD ---
 # Regexes used as string comparisions lie beyond this line.
 
+LogLevel rewrite:trace6
 
 # Enable rewriting (proxying)
 RewriteEngine on
@@ -591,5 +592,4 @@ RewriteRule "/(.*)" "ws://${sophonproxy:%{HTTP_HOST}}/$1" [P,L,E=matched:1]  # R
 # *.sophon.steffo.eu → notebook
 RewriteCond "%{ENV:matched}" "! -eq 1" [NC]  # If the url hasn't been matched by the previous rules
 RewriteCond ".%{ENV:APACHE_PROXY_BASE_DOMAIN} %{HTTP_HOST}" "^([^ ]+) [^ ]+\1$" [NC]  # If this is any other subdomain of ENV:APACHE_PROXY_BASE_DOMAIN
-RewriteCond "%{HTTP_HOST}" ".%{ENV:APACHE_PROXY_BASE_DOMAIN}$" [NC]
 RewriteRule "/(.*)" "http://${sophonproxy:%{HTTP_HOST}}/$1" [P,L,E=matched:1]
