🔧 Remove debug logging

--- a/proxy/httpd.conf
+++ b/proxy/httpd.conf
@@ -554,7 +554,7 @@ SSLRandomSeed connect builtin
 # --- DARK SORCERY AHEAD ---
 # Regexes used as string comparisions lie beyond this line.
 
-LogLevel rewrite:trace6
+# LogLevel rewrite:trace6
 
 # Enable rewriting (proxying)
 RewriteEngine on
