🐛 Fix github actions build paths

--- a/.github/workflows/build-docker-backend.yml
+++ b/.github/workflows/build-docker-backend.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - "/backend"
+      - "backend/**"
 jobs:
   build:
     name: "Build backend image"
