--- a/.github/workflows/build-docker-frontend.yml
+++ b/.github/workflows/build-docker-frontend.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - "/frontend"
+      - "frontend/**"
 jobs:
   build:
     name: "Build frontend image"
