--- a/.github/workflows/analyze-codeql-frontend.yml
+++ b/.github/workflows/analyze-codeql-frontend.yml
@@ -8,6 +8,7 @@ on:
     branches: [ main ]
     paths:
       - "frontend/**"
+  workflow_dispatch:
 jobs:
   analyze:
     name: "Analyze frontend"
