--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,8 @@ coloredlogs = "^15.0.1"
 lazy-object-proxy = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
+Sphinx = "^4.2.0"
+sphinx-rtd-theme = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
