--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ lazy-object-proxy = "^1.6.0"
 [tool.poetry.dev-dependencies]
 Sphinx = "^4.2.0"
 sphinx-rtd-theme = "^1.0.0"
+sphinx-autobuild = "^2021.3.14"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
