--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ lazy-object-proxy = "^1.6.0"
 Sphinx = "^4.2.0"
 sphinx-rtd-theme = "^1.0.0"
 sphinx-autobuild = "^2021.3.14"
+sphinxcontrib-bibtex = "^2.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
