--- a/thesis/Makefile
+++ b/thesis/Makefile
@@ -4,9 +4,12 @@
 # You can set these variables from the command line, and also
 # from the environment for the first two.
 SPHINXOPTS    ?=
-SPHINXBUILD   ?= sphinx-build
-SOURCEDIR     = source
-BUILDDIR      = build
+SPHINXBUILD   ?= "sphinx-build"
+SOURCEDIR     = "source"
+BUILDDIR      = "build"
+
+export LATEXMKOPTS   ?= ""
+export LATEXOPTS     ?= "-interaction=nonstopmode"
 
 # Put it first so that "make" without argument is like "make help".
 help:
