--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,8 @@ Sphinx = "^4.2.0"
 sphinx-rtd-theme = "^1.0.0"
 sphinx-autobuild = "^2021.3.14"
 sphinxcontrib-bibtex = "^2.4.1"
+rinohtype = "^0.5.3"
+Pillow = "^8.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
