--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ sphinx-autobuild = "^2021.3.14"
 sphinxcontrib-bibtex = "^2.4.1"
 rinohtype = "^0.5.3"
 Pillow = "^8.4.0"
+jsx-lexer = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
