--- a/.github/workflows/build-sphinx-thesis.yml
+++ b/.github/workflows/build-sphinx-thesis.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - ".github/workflows/build-sphinx-thesis.yml"
       - "thesis/**"
+      - "backend/**"
 jobs:
   html:
     name: "Build HTML document"
