--- a/.github/workflows/build-sphinx-report.yml
+++ b/.github/workflows/build-sphinx-report.yml
@@ -25,6 +25,7 @@ jobs:
         working-directory: backend/
         run: "poetry install --no-interaction"
       - name: "Find Poetry Python environment"
+        working-directory: backend/
         run: echo "pythonLocation=$(poetry env list --full-path | cut -f1 -d' ')/bin" >> $GITHUB_ENV
       - name: "Build HTML document with Sphinx"
         uses: ammaraskar/sphinx-action@master
@@ -56,6 +57,7 @@ jobs:
         working-directory: backend/
         run: poetry install --no-interaction
       - name: "Find Poetry Python environment"
+        working-directory: backend/
         run: echo "pythonLocation=$(poetry env list --full-path | cut -f1 -d' ')/bin" >> $GITHUB_ENV
       - name: "Install Latex dependencies"
         run: apt-get update -y && apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
