--- a/.github/workflows/build-sphinx-thesis.yml
+++ b/.github/workflows/build-sphinx-thesis.yml
@@ -23,15 +23,13 @@ jobs:
           poetry-version: 1.1.11
       - name: "Install backend dependencies"
         working-directory: backend/
-        run: "poetry install --no-interaction"
+        run: poetry install --no-interaction
       - name: "Find Poetry Python environment"
         working-directory: backend/
         run: echo "pythonLocation=$(poetry env list --full-path | cut -f1 -d' ')/bin" >> $GITHUB_ENV
       - name: "Build HTML document with Sphinx"
-        uses: ammaraskar/sphinx-action@master
-        with:
-          docs-folder: "thesis/"
-          build-command: "make html"
+        working-directory: thesis/
+        run: make html
       - name: "Create a gzip of the build"
         run: "tar -xvzf thesis/_build/thesis.html.tar.gz thesis/_build/html"
       - name: "Upload build artifact"
@@ -62,10 +60,8 @@ jobs:
       - name: "Install Latex dependencies"
         run: apt-get update -y && apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
       - name: "Build Latex document with Sphinx"
-        uses: ammaraskar/sphinx-action@master
-        with:
-          docs-folder: "thesis/"
-          build-command: "make latexpdf"
+        working-directory: thesis/
+        run: make latexpdf
       - name: "Upload build artifact"
         uses: actions/upload-artifact@v2
         with:
