--- a/thesis/Makefile
+++ b/thesis/Makefile
@@ -1,23 +1,18 @@
-# Minimal makefile for Sphinx documentation
-#
-
-# You can set these variables from the command line, and also
-# from the environment for the first two.
-SPHINXOPTS    ?=
-SPHINXBUILD   ?= "sphinx-build"
-SOURCEDIR     = "source"
-BUILDDIR      = "build"
+export SPHINXOPTS    =
+export SPHINXBUILD   = "sphinx-build"
+export SOURCEDIR     = "source"
+export BUILDDIR      = "build"
 
 export LATEXMKOPTS   ?= ""
 export LATEXOPTS     ?= "-interaction=nonstopmode"
 
 # Put it first so that "make" without argument is like "make help".
 help:
-	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS)
 
 
 livehtml:
-	sphinx-autobuild "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+	sphinx-autobuild "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS)
 
 
 .PHONY: help Makefile
@@ -25,4 +20,4 @@ livehtml:
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
-	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS)
