--- a/.github/workflows/build-sphinx-report.yml
+++ b/.github/workflows/build-sphinx-report.yml
@@ -59,9 +59,9 @@ jobs:
       - name: "Find Poetry Python environment"
         working-directory: backend/
         run: echo "pythonLocation=$(poetry env list --full-path | cut -f1 -d' ')/bin" >> $GITHUB_ENV
-      - name: "Install Latex dependencies"
+      - name: "Install LaTeX dependencies"
         run: apt-get update -y && apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
-      - name: "Build Latex document with Sphinx"
+      - name: "Build LaTeX document with Sphinx"
         working-directory: report/
         run: |
           source $pythonLocation/activate
