🔨 The Actions parser didn't like that

--- a/.github/workflows/build-sphinx-report.yml
+++ b/.github/workflows/build-sphinx-report.yml
@@ -43,6 +43,8 @@ jobs:
     name: "Build PDF document"
     runs-on: ubuntu-latest
     steps:
+      - name: "Update apt repositories"
+        run: sudo apt-get update -y
       - name: "Checkout repository"
         uses: actions/checkout@v2
       - name: "Setup Python"
@@ -53,20 +55,14 @@ jobs:
         uses: abatilo/actions-poetry@v2.0.0
         with:
           poetry-version: 1.1.11
+      - name: "Install LaTeX packages"
+        run: sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
       - name: "Install backend dependencies"
         working-directory: backend/
         run: poetry install --no-interaction
       - name: "Find Poetry Python environment"
         working-directory: backend/
         run: echo "pythonLocation=$(poetry env list --full-path | cut -f1 -d' ')/bin" >> $GITHUB_ENV
-      - name: "Install LaTeX dependencies"
-        run: >
-          sudo apt-get update -y &&
-          sudo apt-get install -y
-            latexmk
-            texlive-latex-recommended
-            texlive-latex-extra
-            texlive-fonts-recommended
       - name: "Build LaTeX document with Sphinx"
         working-directory: report/
         run: |
