--- a/.github/workflows/build-sphinx-report.yml
+++ b/.github/workflows/build-sphinx-report.yml
@@ -32,13 +32,13 @@ jobs:
         run: |
           source $pythonLocation/activate
           make html
-      - name: "Create a gzip of the build"
-        run: "tar -cvzf report/_build/report.html.tar.gz report/_build/html"
+      - name: "Create a gzipped tarball of the build"
+        run: tar -cvzf report/build/report.html.tar.gz report/build/html
       - name: "Upload build artifact"
         uses: actions/upload-artifact@v2
         with:
           name: "report.html.tar.gz"
-          path: "report/_build/report.html.tar.gz"
+          path: "report/build/report.html.tar.gz"
   latexpdf:
     name: "Build PDF document"
     runs-on: ubuntu-latest
@@ -72,4 +72,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: "report.pdf"
-          path: "report/_build/latex/sophon.pdf"
+          path: "report/build/latex/sophon.pdf"
