--- a/.github/workflows/build-sphinx-report.yml
+++ b/.github/workflows/build-sphinx-report.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           poetry-version: 1.1.11
       - name: "Install LaTeX packages"
-        run: sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
+        run: sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-luatex
       - name: "Install backend dependencies"
         working-directory: backend/
         run: poetry install --no-interaction
