--- a/.github/workflows/build-sphinx-thesis.yml
+++ b/.github/workflows/build-sphinx-thesis.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v2
+        with:
+          lfs: true
+      - name: "Checkout LFS objects"
+        run: git lfs checkout
       - name: "Setup Python"
         uses: actions/setup-python@v2
         with:
@@ -48,6 +52,10 @@ jobs:
         run: sudo apt-get update -y
       - name: "Checkout repository"
         uses: actions/checkout@v2
+        with:
+          lfs: true
+      - name: "Checkout LFS objects"
+        run: git lfs checkout
       - name: "Setup Python"
         uses: actions/setup-python@v2
         with:
@@ -57,7 +65,7 @@ jobs:
         with:
           poetry-version: 1.1.11
       - name: "Install LaTeX packages"
-        run: sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-luatex
+        run: sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-luatex fonts-ebgaramond fonts-ebgaramond-extra fonts-firacode
       - name: "Install backend dependencies"
         working-directory: backend/
         run: poetry install --no-interaction
