--- a/.github/workflows/build-sphinx-report.yml
+++ b/.github/workflows/build-sphinx-report.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v2
+        with:
+          lfs: true
+      - name: "Checkout LFS objects"
+        run: git lfs checkout
       - name: "Setup Python"
         uses: actions/setup-python@v2
         with:
