--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ sphinx-autobuild = "^2021.3.14"
 rinohtype = "^0.5.3"
 Pillow = "^8.4.0"
 jsx-lexer = "^1.0.0"
+sphinxcontrib-httpdomain = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
