--- a/.github/workflows/build-sphinx-thesis.yml
+++ b/.github/workflows/build-sphinx-thesis.yml
@@ -80,9 +80,9 @@ jobs:
       - name: "Remove numbering from subsubsections and lower headings"
         working-directory: thesis/build/latex/
         run: |
-          sed s/\subsubsection[{]/\subsubsection*{/g progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex > progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
-          sed s/\paragraph[{]/\paragraph*{/g progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex > progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
-          sed s/\subparagraph[{]/\subparagraph*{/g progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex > progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
+          sed -E s/\subsubsection[{]/\subsubsection*{/g progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex > progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
+          sed -E s/\paragraph[{]/\paragraph*{/g progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex > progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
+          sed -E s/\subparagraph[{]/\subparagraph*{/g progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex > progettazioneesviluppodisophonapplicativocloudasupportodellaricerca.tex
       - name: "Build PDF document with Latexmk"
         working-directory: thesis/build/latex/
         run: make
